<resources>
    <string name="app_name">Penha</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_info">Info</string>

    <string name="btnLogar">Login</string>
    <string name="btnCadastrar">Cadastre-se</string>
    <string name="btnVisitar">Acessar sem Cadastro</string>
    <string name="txtAdicionar">Adicionar</string>
    <string name="txtDeletar">Deletar</string>
    <string name="txtEditar">Editar</string>
    <string name="txtListar">Listar</string>
    <string name="nome">Nome</string>
    <string name="dtnasc">DtNasc</string>
    <string name="endereco">Endereço</string>
</resources>
